atualização de imagens e cards

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>Explicação sobre mapas mentais...</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="mapa.jpg" class="img-fluid" alt="Mapas Mentais">
+                    <img src="img/mapa mental.jpg" class="img-fluid" alt="Mapas Mentais">
                 </div>
             </div>
             <h4>Aplicação</h4>
@@ -76,7 +76,7 @@
                     <p>Explicação sobre o Método de Feynman...</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="feynman.jpg" class="img-fluid" alt="Método de Feynman">
+                    <img src="img/feynman.jpg" class="img-fluid" alt="Método de Feynman">
                 </div>
             </div>
             <h4>Aplicação</h4>
@@ -90,7 +90,7 @@
                     <p>Explicação sobre flashcards...</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="flashcards.jpg" class="img-fluid" alt="Flashcards">
+                    <img src="img/flashcards.jpg" class="img-fluid" alt="Flashcards">
                 </div>
             </div>
             <h4>Aplicação</h4>
