--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                     <li class="nav-item"><a class="nav-link" href="#flashcards">Flashcards</a></li>
                 </ul>
             </div>
+            <div>
                 <button id="aumentar-fonte" class="btn btn-primary fw-bold m-1">A+</button>
                 <button id="diminuir-fonte" class="btn btn-primary fw-bold m-1">A-</button>
+            </div>
+                
         </div>
     </nav>
 
